[client] Fix broken layout of some dialogs on bootstrap 3

--- a/client/static/css/hatohol.css
+++ b/client/static/css/hatohol.css
@@ -25,3 +25,8 @@
   height: 1.8em;
   line-height: 1.8em;
 }
+
+label {
+  margin-top: 5px;
+  margin-top: 5px;
+}
